Fri May 17 15:42:42 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* share/doc/users_guide_ja.texi : Revise description of W0642 message.
	* share/doc/users_guide_en.texi : Ditto.

Fri May 17 15:00:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W9003.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Revise specification of
	  W0642 code check in order to warn about all the illegal address
	  derivation from the object declared as `register'.
	* etc/mesg.d/c_builtin/ja_JP/messages.yml : Ditto.
	* etc/mesg.d/c_builtin/en_US/messages.yml : Ditto.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Add notification about
	  object address derivation.

Fri May 17 12:55:38 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0642.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Fix W0642 code check in
	  order to warn only when the original object of implicit conversion is
	  an array.

	* lib/adlint/cc1/mediator.rb : Add implicit conversion notification in
	  object conversion methods to notify illegal conversions.
	* lib/adlint/cc1/interp.rb : Ditto.
	* lib/adlint/cc1/expr.rb : Ditto.
	* lib/adlint/cc1/ctrlexpr.rb : Ditto.

	* lib/adlint/cc1/object.rb : Fix argument to parameter assignment
	  behavior in order to notify illegal conversions correctly.

Fri May 17 09:35:36 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Fix bad variable defining behavor in order
	  not to predefine a variable of incomplete type.

Thu May 16 18:38:40 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0580.feature : Add scenario to reproduce a known
	  bug.

Thu May 16 17:08:41 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0422.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/interp.rb : Fix bad variable defining behavor in order