@@ -576,9 +576,11 @@ module Cc1 #:nodoc:
           # NOTE: Define variable first in order to correctly evaluate
           #       sizeof-expression that refers to the defining variable in the
           #       initializer.
-          var = define_variable(node)
+          unless var = variable_named(node.identifier.value)
+            var = define_variable(node)
+          end
           init_var, init_conved = evaluate_initializer(node)
-          var.assign!(init_conved.value.to_defined_value)
+          var = define_variable(node, init_conved.value.to_defined_value)
         end
 
         notify_variable_value_referred(node, init_var)
